[package]
name = "v8_derive"
description = "Derive macros and helpers for Rusty v8"
version = "0.2.0"
edition = "2021"
authors = ["Marcel Ibes <mibes@avaya.com>"]
license = "MIT"
repository = "https://github.com/mibes404/v8_derive.git"

[dependencies]
thiserror = "2.0"
v8_derive_macros = { path = "../v8_derive_macros", version = "0.2.0" }
serde_json = { version = "1", optional = true }
deno_core = "0.334.0"

[features]
default = []
json = ["serde_json"]
